--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2"
   },
+  "engines": {
+    "node": "6.9.1",
+    "npm": "6.4.1"
+  },
   "scripts": {
-    "webpack": "webpack --mode=development --watch"
+    "webpack": "webpack --mode=development --watch",
+    "postinstall": "webpack --mode=production"
   }
 }
